--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="red">Red alert!</string>
 	<string name="app_name">海の生き物シリーズ</string>
+	<string name="start_btn">Start</string>
+	<string name="start_text">Startを押してください</string>
+	<dimen  name="activity_horizontal_margin">16px</dimen>
+	<attr   name="textAppearanceMedium">reference</attr>
 </resources>
